# Web_Application_Socket

./: README.md
client/: index.html
server/: CMakeLists.txt  main.cpp
server/Core/: CommandHandler.cpp  CommandHandler.h
server/Features/: AppManager.cpp  FileMgr.h  Keylogger.cpp  Power.cpp  ScreenCap.cpp  Utils.h  Webcam.cpp
server/Network/: ServerNetwork.cpp  ServerNetwork.h
